@@ -1610,15 +1610,6 @@ $row = $result->all;
 is_deeply($row, [{$key1 => 1, $key2 => 2}]);
 
 $where = $dbi->where;
-$where->clause(['and', ":${key1}{=}"]);
-$where->param({$key1 => undef});
-$where->if('defined');
-$where->map;
-$result = $dbi->execute("select * from $table1 $where", {$key1 => 1});
-$row = $result->all;
-is_deeply($row, [{$key1 => 1, $key2 => 2}, {$key1 => 3, $key2 => 4}]);
-
-$where = $dbi->where;
 $where->clause(['or', ":${key1}{=}", ":${key1}{=}"]);
 $where->param({$key1 => [undef, undef]});
 $result = $dbi->execute("select * from $table1 $where", {$key1 => [1, 0]});
@@ -1627,133 +1618,6 @@ is_deeply($row, [{$key1 => 1, $key2 => 2}]);
 $result = $dbi->execute("select * from $table1 $where", {$key1 => [0, 1]});
 $row = $result->all;
 is_deeply($row, [{$key1 => 1, $key2 => 2}]);
-
-$where = $dbi->where;
-$where->clause(['and', ":${key1}{=}"]);
-$where->param({$key1 => [undef, undef]});
-$where->if('defined');
-$where->map;
-$result = $dbi->execute("select * from $table1 $where", {$key1 => [1, 0]});
-$row = $result->all;
-is_deeply($row, [{$key1 => 1, $key2 => 2}, {$key1 => 3, $key2 => 4}]);
-$result = $dbi->execute("select * from $table1 $where", {$key1 => [0, 1]});
-$row = $result->all;
-is_deeply($row, [{$key1 => 1, $key2 => 2}, {$key1 => 3, $key2 => 4}]);
-
-$where = $dbi->where;
-$where->clause(['and', ":${key1}{=}"]);
-$where->param({$key1 => 0});
-$where->if('length');
-$where->map;
-$result = $dbi->execute("select * from $table1 $where", {$key1 => 1});
-$row = $result->all;
-is_deeply($row, [{$key1 => 1, $key2 => 2}]);
-
-$where = $dbi->where;
-$where->clause(['and', ":${key1}{=}"]);
-$where->param({$key1 => ''});
-$where->if('length');
-$where->map;
-$result = $dbi->execute("select * from $table1 $where", {$key1 => 1});
-$row = $result->all;
-is_deeply($row, [{$key1 => 1, $key2 => 2}, {$key1 => 3, $key2 => 4}]);
-
-$where = $dbi->where;
-$where->clause(['and', ":${key1}{=}"]);
-$where->param({$key1 => 5});
-$where->if(sub { ($_[0] || '') eq 5 });
-$where->map;
-$result = $dbi->execute("select * from $table1 $where", {$key1 => 1});
-$row = $result->all;
-is_deeply($row, [{$key1 => 1, $key2 => 2}]);
-
-$where = $dbi->where;
-$where->clause(['and', ":${key1}{=}"]);
-$where->param({$key1 => 7});
-$where->if(sub { ($_[0] || '') eq 5 });
-$where->map;
-$result = $dbi->execute("select * from $table1 $where", {$key1 => 1});
-$row = $result->all;
-is_deeply($row, [{$key1 => 1, $key2 => 2}, {$key1 => 3, $key2 => 4}]);
-
-$where = $dbi->where;
-$where->param({id => 1, author => 'Ken', price => 1900});
-$where->map(id => "$table1.id",
-    author => ["$table1.author", sub { '%' . $_[0] . '%' }],
-    price => ["$table1.price", {if => sub { $_[0] eq 1900 }}]
-);
-is_deeply($where->param, {"$table1.id" => 1, "$table1.author" => '%Ken%',
-  "$table1.price" => 1900});
-
-$where = $dbi->where;
-$where->param({id => 0, author => 0, price => 0});
-$where->map(
-    id => "$table1.id",
-    author => ["$table1.author", sub { '%' . $_[0] . '%' }],
-    price => ["$table1.price", sub { '%' . $_[0] . '%' },
-      {if => sub { $_[0] eq 0 }}]
-);
-is_deeply($where->param, {"$table1.id" => 0, "$table1.author" => '%0%', "$table1.price" => '%0%'});
-
-$where = $dbi->where;
-$where->param({id => '', author => '', price => ''});
-$where->if('length');
-$where->map(
-    id => "$table1.id",
-    author => ["$table1.author", sub { '%' . $_[0] . '%' }],
-    price => ["$table1.price", sub { '%' . $_[0] . '%' },
-      {if => sub { $_[0] eq 1 }}]
-);
-is_deeply($where->param, {});
-
-$where = $dbi->where;
-$where->param({id => undef, author => undef, price => undef});
-$where->if('length');
-$where->map(
-    id => "$table1.id",
-    price => ["$table1.price", {if => 'exists'}]
-);
-is_deeply($where->param, {"$table1.price" => undef});
-
-$where = $dbi->where;
-$where->param({price => 'a'});
-$where->if('length');
-$where->map(
-    id => ["$table1.id", {if => 'exists'}],
-    price => ["$table1.price", sub { '%' . $_[0] }, {if => 'exists'}]
-);
-is_deeply($where->param, {"$table1.price" => '%a'});
-
-$where = $dbi->where;
-$where->param({id => [1, 2], author => 'Ken', price => 1900});
-$where->map(
-    id => "$table1.id",
-    author => ["$table1.author", sub { '%' . $_[0] . '%' }],
-    price => ["$table1.price", {if => sub { $_[0] eq 1900 }}]
-);
-is_deeply($where->param, {"$table1.id" => [1, 2], "$table1.author" => '%Ken%',
-  "$table1.price" => 1900});
-
-$where = $dbi->where;
-$where->if('length');
-$where->param({id => ['', ''], author => 'Ken', price => 1900});
-$where->map(
-    id => "$table1.id",
-    author => ["$table1.author", sub { '%' . $_[0] . '%' }],
-    price => ["$table1.price", {if => sub { $_[0] eq 1900 }}]
-);
-is_deeply($where->param, {"$table1.id" => [$dbi->not_exists, $dbi->not_exists], "$table1.author" => '%Ken%',
-  "$table1.price" => 1900});
-
-$where = $dbi->where;
-$where->param({id => ['', ''], author => 'Ken', price => 1900});
-$where->map(
-    id => ["$table1.id", {if => 'length'}],
-    author => ["$table1.author", sub { '%' . $_[0] . '%' }, {if => 'defined'}],
-    price => ["$table1.price", {if => sub { $_[0] eq 1900 }}]
-);
-is_deeply($where->param, {"$table1.id" => [$dbi->not_exists, $dbi->not_exists], "$table1.author" => '%Ken%',
-  "$table1.price" => 1900});
 
 test 'register_tag_processor';
 $dbi = DBIx::Custom->connect;
